# financial-modelling

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  license.txt
.custom-dictionary/: custom-words.txt
data/: nvda_options_data_2025-01-26.csv  nvda_options_data_2025-01-27.csv  nvda_options_data_2025-10-28.csv  option_data_ingest.ipynb
data/bbg_data/: .gitignore  README.md  pyproject.toml
data/bbg_data/examples/: ATM_OPTIONS_README.md  advanced_usage.py  atm_option_timeseries.py  basic_usage.py
data/bbg_data/scripts/: test_installation.py
data/bbg_data/src/bbg_data/: __init__.py  cli.py  enums.py  models.py  options.py  requests.py  session.py
data/bbg_data/src/bbg_data/api/: __init__.py  options.py  requests.py
data/bbg_data/src/bbg_data/core/: __init__.py  enums.py  models.py  session.py  utils.py
data/bbg_data/src/bbg_data/data/: __init__.py
mock-exchange-feed/: CMakeLists.txt
mock-exchange-feed/include/: feed_generator.h
mock-exchange-feed/src/: feed_generator.cpp  main.cpp
platform/: Platform.sln
platform/Common/Utils/: MathExtension.cs
platform/Platform/: Class1.cs
platform/Platform.Tests/: Class1Test.cs  Platform.Tests.csproj
platform/PricerServer/: Pricer.http  PricerServer.csproj  Program.cs
platform/PricerServer/Builders/: OptionQuoteRequestBuilder.cs  QuoteRequestBuilder.cs
platform/PricerServer/Builders/QuoteRequestBuilders/: ForwardQuoteRequestBuilder.cs  OptionQuoteRequestBuilder.cs  QuoteRequestBuilder.cs  SwapQuoteRequestBuilder.cs
platform/PricerServer/Controllers/: QuoteRequestController.cs
platform/PricerServer/Factories/: QuoteRequestFactory.cs
platform/PricerServer/Models/: OptionQuoteRequest.cs  QuoteRequest.cs
platform/PricerServer/Models/QuoteRequests/: ForwardQuoteRequest.cs  OptionQuoteRequest.cs  QuoteRequest.cs  SwapQuoteRequest.cs
platform/PricerServer/Properties/: launchSettings.json
platform/pricer-app/: package-lock.json  package.json
platform/pricer-app/src/: App.css  App.js  index.html
quant-library/QuantLibrary/: CMakeLists.txt
quant-library/QuantLibrary/include/Instrument/: Instrument.h  Option.h
quant-library/QuantLibrary/include/Model/: BlackScholesModel.h  PricingModel.h
quant-library/QuantLibrary/include/PricingEngine/: PricingEngine.h
quant-library/QuantLibrary/src/PricingEngine/: PricingEngine.cpp
quant-library/c++/: CMakeLists.txt  main  youtube  youtube.cpp
quant-library/documentation/: 1_introduction.md  2_interest-rates.md  3_bonds.md  4_equities  4_equities.md  5_commodities.md  6_arbitrage.md  6_derivatives  7_derivatives  7_derivatives.md  7_forwards_futures_swaps.md  8_stochastic-processes.md  9_options.md  commodity_derivatives.md  data_structures_alogrithms.md  design_patterns.md  python_basics.md  statistics.md
quant-library/documentation/finance/: 3_bonds.md  7_forwards_futures_swaps.md  8_stochastic-processes.md  9_options.md
quant-library/documentation/finance/commodities/: commodity_derivatives.md
quant-library/documentation/images/draw-io/: bond-process  forward-payoff  full-binomial-model.drawio  long-call  one-step-binomial-model.drawio  short-call  two-step-binomial-model.drawio
quant-library/documentation/mathematics/: statistics.md
quant-library/documentation/programming/: design_patterns.md  python_basics.md  python_object_orientated.md
quant-library/python/: REAMDME.md  app.py  requirements.txt
quant-library/python/ag-barometer-analyser/: ag_barometer_feed.xml  starter.py
quant-library/python/mock_data/: GSPC.csv  RUT.csv
quant-library/python/notebooks/: bonds.ipynb  monte-carlo-options-pricer.ipynb  monte-carlo-options=pricer.ipynb  options.ipynb  pyquantlibrary_basic.ipynb  python_basics.ipynb  simple-python-model.ipynb  t-distribution.ipynb  time-series-statistics.ipynb
quant-library/python/systematic-trading/: basic_concepts.ipynb
quantitative/QuantLibrary/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
quantitative/QuantLibrary/include/Model/Exotics/: ADI_Solver.h  Grid2D.h  HestonParams.h  Heston_PDE.h  Payoff.h
quantitative/QuantLibrary/include/RiskEngine/: RiskEngine.h
quantitative/QuantLibrary/python/tests/: test_heston_adi_pricer.py
quantitative/QuantLibrary/src/Model/Exotics/: ADI_Solver.cpp  Grid2D.cpp  Heston_PDE.cpp
quantitative/QuantLibrary/src/PythonWrapper/: PythonWrapper.cpp
quantitative/documentation/: interview_preparation.md  quatum_computing.md
quantitative/documentation/finance/: 10_portfolio_theory.md  1_introduction.md  2_interest-rates.md  3_bonds.md  4_equities.md  6_arbitrage.md  7_forwards_futures_swaps.md  8_stochastic-processes.md  9_options.md  advanced_derivative_pricing_and_risk_management.md  systematic_trading.md
quantitative/documentation/images/draw-io/: american-long-call  barrier-options  binary-call.drawio  binary-put.drawio  bull-spread.drawio  butterfly-spread.drawio  complement-set.drawio  down-and-out-put.drawio  long-put  partition.drawio  (+14 more)
quantitative/documentation/interviews/: interview_preparation.md
quantitative/documentation/mathematics/: calculus.md  probability_theory.md  set_theory.md  statistics.md
quantitative/documentation/programming/: data_structures_alogrithms.md  design_patterns.md  python_1_style_syntax.md  python_2_variables.md  python_3_functions.md  python_4_object_orientated.md  python_5_decorators.md  python_6_logging.md  python_7_modules_packages_namespaces.md  python_7_namespaces_modules_packages.md  python_basics.md  python_examples.md
quantitative/documentation/research/: QMUL_SMS_MSc_2026_Matthew_Walmsley.tex  QMUL_SMS_MSc_Thesis_Template_2026.tex  README.md  references.bib
quantitative/quant_platform/: REAMDME.md  requirements.txt
quantitative/quant_platform/mock_data/: EURUSD.csv  SX5E.csv
quantitative/quant_platform/notebooks/: advanced_derivatives.ipynb  exchange_conector.ipynb  libor-curve.ipynb  options.ipynb  probability_distributions_plots.ipynb  pyquantlibrary_basic.ipynb  python_basics.ipynb
quantitative/quant_platform/systematic-trading/: basic_concepts.ipynb  technical_analysis.ipynb
(+14 files in other folders)
